<resources>
    <string name="app_name">玉燕食堂</string>
    <string name="service_notify_content">点击进入</string>
    <string name="ble_service_title">蓝牙前台服务</string>
    <string name="share">共享</string>
    <string name="export_fail">导出失败!</string>
    <string name="tip">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="loading">加载中…</string>
    <string name="main">首页</string>
    <string name="packages">套餐</string>
    <string name="setting">设置</string>
    <string name="printer">打印机</string>
    <string name="category_manager">分类</string>
    <string name="product_manager">菜单</string>
    <string name="order_management">订单</string>
    <string name="week_product">周谱</string>
    <string name="fixed_package">套餐</string>
    <string name="please_enter_category">请输入分类名称</string>
    <string name="add_category">添加分类</string>
    <string name="edit_category">编辑分类</string>
    <string name="add">添加</string>
    <string name="product_name">菜品名称</string>
    <string name="optional">必填</string>
    <string name="please_input_product_name">请输入菜品名称</string>
    <string name="please_input_product_price">请输入菜品售价</string>
    <string name="add_product">添加菜品</string>
    <string name="edit_product">编辑菜品</string>
    <string name="product_price">菜品售价</string>
    <string name="product_category">菜品分类</string>
    <string name="select_category">选择分类</string>
    <string name="sold_out">售罄</string>
    <string name="is_sold_out">是否售罄</string>
    <string name="no_product_name">请输入菜名</string>
    <string name="no_product_price">请输入价格</string>
    <string name="delete">删除</string>
    <string name="delete_category_tips">确认删除分类“%s”？</string>
    <string name="delete_product_tips">确认删除菜品“%s”？</string>
    <string name="remove_product_tips">确认移除菜品“%s”？</string>
    <string name="remind_warn">温馨提示！</string>

    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="week7">日</string>
    <string name="week1">一</string>
    <string name="week2">二</string>
    <string name="week3">三</string>
    <string name="week4">四</string>
    <string name="week5">五</string>
    <string name="week6">六</string>

<!--    <string name="monday">星期一</string>-->
<!--    <string name="tuesday">星期二</string>-->
<!--    <string name="wednesday">星期三</string>-->
<!--    <string name="thursday">星期四</string>-->
<!--    <string name="friday">星期五</string>-->
<!--    <string name="saturday">星期六</string>-->
<!--    <string name="sunday">星期日</string>-->

    <string-array name="week_array">
        <item name="monday">星期一</item>
        <item name="tuesday">星期二</item>
        <item name="wednesday">星期三</item>
        <item name="thursday">星期四</item>
        <item name="friday">星期五</item>
        <item name="saturday">星期六</item>
        <item name="sunday">星期日</item>
    </string-array>


    <string-array name="sort_array">
        <item name="all">所有</item>
        <item name="category">分类</item>
        <item name="week">一周</item>
    </string-array>

    <string name="packages_manager">套餐管理</string>
    <string name="add_packages">添加套餐</string>
    <string name="edit_packages">编辑套餐</string>
    <string name="packages_name">套餐名称</string>
    <string name="packages_price">套餐价格</string>
    <string name="please_input_packages_name">请输入菜品名称</string>
    <string name="please_input_packages_price">请输入套餐价格</string>
    <string name="packages_product_list">套餐商品列表</string>
    <string name="select_packages_product">请选择套餐菜品</string>
    <string name="delete_sure_tips">确认删除“%s”？</string>
    <string name="all">所有</string>
    <string name="show_category">显示分类</string>
    <string name="show_week">显示周谱</string>
    <string name="fixed_product">打印后清除选项</string>
    <string name="print_receipt">打印小票</string>
    <string name="blue_label">蓝牙设备</string>
    <string name="paired">已配对</string>
    <string name="unpaired">未配对</string>
    <string name="bluetooth_is_not_enabled">蓝牙未开启</string>
    <string name="searching">搜索中…</string>
    <string name="search_bt">搜索设备</string>
    <string name="search_complete">搜索完成</string>
    <string name="permission">权限</string>
    <string name="location_title">位置权限许可</string>
    <string name="ble_off_tips">需要启用蓝牙才能连接附近的打印机设备</string>
    <string name="location_content">从Android8.0及更高版本开始, Android应用需要位置权限才能扫描附近的蓝牙打印机设备。\n选择“始终允许”后,方可正常使用打印机。</string>
    <string name="no_bluetooth">手机不支持蓝牙功能</string>
    <string name="no_read">无读取文件权限</string>
    <string name="no_permission">无定位权限</string>
    <string name="no_scan_permission">无附近设备权限</string>
    <string name="camera">扫描需要摄像头权限</string>
    <string name="camera_permission">获取权限失败，无法使用扫描功能</string>
    <string name="status_error">状态获取异常</string>
    <string name="status_fail">打印机状态获取失败，请检查打印机是否缺纸或开盖</string>
    <string name="status_normal">状态正常</string>
    <string name="status_out_of_paper">状态缺纸</string>
    <string name="status_open">状态开盖</string>
    <string name="status_overheated">状态过热</string>
    <string name="conn_first">请先连接打印机</string>
    <string name="conn_printer">连接打印机</string>
    <string name="not_connected">未连接</string>
    <string name="disconnect">断开连接</string>
    <string name="conn_fail">连接失败</string>
    <string name="conn_success">连接成功</string>
    <string name="conning">连接中…</string>
    <string name="checking">查询中…</string>
    <string name="conned">已连接</string>
    <string name="print_success">打印成功</string>
    <string name="print_fail">打印失败</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败</string>
    <string name="order">订单</string>
    <string name="name">名称</string>
    <string name="quantity">数量</string>
    <string name="price">价格</string>
    <string name="total_amount">总金额:</string>
    <string name="cashier">收银员:</string>
    <string name="please_select_product">请选择菜品</string>
    <string name="please_select_packages">请选择套餐</string>
    <string name="print_complete">打印完成</string>
    <string name="connect_device_next_tips">可以连接打印机了</string>
    <string name="is_show_position">显示菜单序号</string>
    <string name="no_data">暂无数据</string>

</resources>